tools/tests/errors/surf_lib_10.experr
invalid regex
bad character range in class
